fixing wobly overflowx scroll

--- a/scripts/app.css
+++ b/scripts/app.css
@@ -450,6 +450,7 @@ h2,h3 {
   right: 0%;
   bottom: 0%;
   overflow-y: scroll;
+  overflow-x: hidden;
   margin-top: 10%;
   padding-bottom: 10%;
   padding-top: 10%;
@@ -525,7 +526,7 @@ p {
   grid-template-columns: auto auto auto;
   grid-gap: 5px;
   /* background-color: #2196F3;  Comment this out later to remove the background color when not needed */
-  padding: 10px;
+  
 }
 
 .sets-grid-container {
